Fix subtree expand/collapse in mobile

--- a/src/app/section-experience/section-experience.component.scss
+++ b/src/app/section-experience/section-experience.component.scss
@@ -191,6 +191,7 @@
 
             &--title {
                 overflow: hidden; // make it work for desktop again
+                display: inline;
             }
 
             @include respond(phone) {
